Fix alignment for main page

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,13 +14,13 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     padding: 0px;
     margin: 0px;
-    gap: 30px;
-    
+    gap: 30px;  
 }
 
-div {
+.logo-container {
     align-self: center;
     margin-top: 30px;
 }
@@ -30,11 +30,10 @@ div {
     width: auto;
     padding: 10px;
     border: dashed;
-    border-radius: 10px;    
-    
+    border-radius: 10px;
 }
 
-h1, h2{
+h1, h2 {
     font-family: "Coffee Mood", serif, Verdana, sans-serif;
     margin: 0px;
     padding: 0px;
@@ -57,17 +56,29 @@ ul {
 
 .main {
     display: flex;
+    justify-content: space-evenly;
+    width: 80vw;
 }
 
-div > a{
+.recipe-box {
+    display: flex;
+    max-width: 100px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.recipe-box > a {
     color: #f5e960;
     text-decoration: none;
     font-family: "Mabook", serif, Verdana, sans-serif;
+    display: block;
+    text-align: center;
 }
 
-div > img {
+.recipe-box > img {
     height: 100px;
     width: auto;
+    padding: 10px 0px;
 }
 
 p {
